fixed order of processing

--- a/03_other_postprocessing/00_monthly_means_surge_SeaLevelMonitor.ipynb
+++ b/03_other_postprocessing/00_monthly_means_surge_SeaLevelMonitor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "93969755-c92e-450d-876c-440e3c1599a8",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6f4f7d8d-1f1c-44ef-ac89-1e860a1d151c",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "430395aa-ef73-4468-af2f-562d0ae9f442",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "8e45ec75-ad9e-4bad-a243-2f1562d9cf1e",
    "metadata": {},
    "outputs": [],
@@ -57,15 +57,7 @@
    "execution_count": null,
    "id": "76acaace-257a-4a99-883e-d6fb15559fd7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing year 1955...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for yr in yrs:\n",
     "    print(f'Processing year {yr}...')\n",
@@ -75,23 +67,22 @@
     "    if len(ts_files) == 12:\n",
     "        # open all data for that year in one dataset\n",
     "        ds = xr.open_mfdataset(ts_files)\n",
-    "\n",
+    "        \n",
     "        # resample to monthly means\n",
     "        ds_monthly_mean = ds.resample(time='M').mean()\n",
-    "\n",
-    "        # drop the time dimension on coordinates that got added when opening the dataset\n",
-    "        ds_monthly_mean.load()\n",
     "        ds_monthly_mean['station_x_coordinate'] = ds_monthly_mean['station_x_coordinate'].isel(time=0,drop=True)\n",
     "        ds_monthly_mean['station_y_coordinate'] = ds_monthly_mean['station_y_coordinate'].isel(time=0,drop=True) \n",
-    "\n",
+    "        \n",
+    "        # drop the time dimension on coordinates that got added when opening the dataset\n",
+    "        ds_monthly_mean.load()\n",
+    "        \n",
     "        # save resulting file\n",
     "        ofile = os.path.join(outdir,'era5_reanalysis_surge_%s_v1_monthly_mean.nc' % yr)\n",
-    "        ds_monthly_mean.to_netcdf(ofile)  \n",
+    "        ds_monthly_mean.to_netcdf(ofile)\n",
+    "        del ds, ds_monthly_mean\n",
     "        print('==== Done!')\n",
     "    else:\n",
-    "        print('==== Not all months are available in %s'% yr)\n",
-    "    del ds, ds_monthly_mean\n",
-    "        "
+    "        print('==== Not all months are available in %s'% yr)\n"
    ]
   },
   {
