modified SLM workflow

--- a/03_other_postprocessing/00_monthly_means_surge_SeaLevelMonitor.ipynb
+++ b/03_other_postprocessing/00_monthly_means_surge_SeaLevelMonitor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "93969755-c92e-450d-876c-440e3c1599a8",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6f4f7d8d-1f1c-44ef-ac89-1e860a1d151c",
    "metadata": {},
    "outputs": [],
@@ -27,12 +27,13 @@
     "sys.path.append(\"..\")\n",
     "from path_dict import path_dict\n",
     "dir_postproc = path_dict['postproc']\n",
-    "dir_ts = os.path.join(dir_postproc,'timeseries-GTSM-ERA5-10min','surge')"
+    "dir_ts = os.path.join(dir_postproc,'timeseries-GTSM-ERA5-10min','surge')\n",
+    "dir_ts2 = os.path.join(dir_postproc,'timeseries-GTSM-ERA5-10min-1979-2018','surge')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "430395aa-ef73-4468-af2f-562d0ae9f442",
    "metadata": {},
    "outputs": [],
@@ -43,43 +44,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "8e45ec75-ad9e-4bad-a243-2f1562d9cf1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "# select year to process\n",
-    "yrs = range(1955,2022)"
+    "yrs = range(1951,2023)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "76acaace-257a-4a99-883e-d6fb15559fd7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing year 2023...\n",
+      "==== Done!\n"
+     ]
+    }
+   ],
    "source": [
     "for yr in yrs:\n",
     "    print(f'Processing year {yr}...')\n",
     "\n",
-    "    ts_files = glob.glob(os.path.join(dir_ts,f'reanalysis_surge_10min_{yr}_*_v1.nc'))\n",
+    "    if yr in range(1980,2019):\n",
+    "        dir_ts_yr = dir_ts2\n",
+    "    else:\n",
+    "        dir_ts_yr = dir_ts\n",
+    "    ts_files = glob.glob(os.path.join(dir_ts_yr,f'reanalysis_surge_10min_{yr}_*_v1.nc'))\n",
     "\n",
     "    if len(ts_files) == 12:\n",
     "        # open all data for that year in one dataset\n",
     "        ds = xr.open_mfdataset(ts_files)\n",
     "        \n",
     "        # resample to monthly means\n",
-    "        ds_monthly_mean = ds.resample(time='M').mean()\n",
-    "        ds_monthly_mean['station_x_coordinate'] = ds_monthly_mean['station_x_coordinate'].isel(time=0,drop=True)\n",
-    "        ds_monthly_mean['station_y_coordinate'] = ds_monthly_mean['station_y_coordinate'].isel(time=0,drop=True) \n",
-    "        \n",
+    "        ds_monthly_mean = ds.resample(time='M',label='right').mean()\n",
+    "\n",
+    "        # remove duplicate coordinate data\n",
+    "        #ds_monthly_mean['station_x_coordinate'] = ds_monthly_mean['station_x_coordinate'].isel(time=0,drop=True)\n",
+    "        #ds_monthly_mean['station_y_coordinate'] = ds_monthly_mean['station_y_coordinate'].isel(time=0,drop=True) \n",
+    "\n",
+    "        # create coordinate with year and month numbers\n",
+    "        year = ds_monthly_mean.time.dt.year\n",
+    "        month = ds_monthly_mean.time.dt.month\n",
+    "        ds_monthly_mean = ds_monthly_mean.assign_coords(year=(\"time\", year.data), month=(\"time\", month.data))\n",
+    "\n",
+    "        # reshape the array to (..., \"month\", \"year\")\n",
+    "        ds_monthly_mean = ds_monthly_mean.set_index(time=(\"year\", \"month\")).unstack(\"time\")\n",
+    "\n",
+    "        # decode station name strings\n",
+    "        ds_monthly_mean['station_name'] = ds_monthly_mean['station_name'].load().str.decode('utf-8',errors='ignore').str.strip()\n",
+    "\n",
     "        # drop the time dimension on coordinates that got added when opening the dataset\n",
     "        ds_monthly_mean.load()\n",
     "        \n",
     "        # save resulting file\n",
     "        ofile = os.path.join(outdir,'era5_reanalysis_surge_%s_v1_monthly_mean.nc' % yr)\n",
     "        ds_monthly_mean.to_netcdf(ofile)\n",
-    "        del ds, ds_monthly_mean\n",
+    "        #del ds, ds_monthly_mean\n",
     "        print('==== Done!')\n",
     "    else:\n",
     "        print('==== Not all months are available in %s'% yr)\n"
@@ -87,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "3e2dbf87-e86b-4d88-86a2-7e04f89e7738",
    "metadata": {},
    "outputs": [],
@@ -105,13 +132,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "882ee683-ff48-4e43-87b8-c83636434745",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ds_monthly_mean['surge'].sel(stations=station_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "94679611-54e8-4943-9412-3eba5df3648c",
    "metadata": {},
    "outputs": [],
    "source": [
     "#plt.plot(ds['time'],ds['surge'].sel(stations=station_id))\n",
     "#for mm in range(1,12):\n",
-    "#    plt.plot([ds_monthly_mean['time'][mm-1].values,ds_monthly_mean['time'][mm].values],[ds_monthly_mean['surge'].sel(stations=station_id)[mm],ds_monthly_mean['surge'].sel(stations=station_id)[mm]],color='red')"
+    "#    plt.plot([ds_monthly_mean['month'][mm-1].values,ds_monthly_mean['month'][mm].values],[ds_monthly_mean['surge'].sel(stations=station_id)[mm],ds_monthly_mean['surge'].sel(stations=station_id)[mm]],color='red')"
    ]
   }
  ],
